# fannc

./: CMakeLists.txt  README.md  USAGE.md  cmd.c  cmd.h  main.c
cmake/Modules/: FindFann.cmake
